--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [project]
 name = "iuri-python-release"
 dynamic = ["version"]
+readme = "README.md"
 
 [tool.setuptools_scm]
 local_scheme = "no-local-version"
