--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,12 +3,8 @@
 name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  release:
+    types: [published]
 
 jobs:
   build:
